Apply modernization API updates
Agent-Logs-Url: https://github.com/hazendaz/sitemesh2/sessions/c77472e0-2181-4223-86a6-5b5ce1819ca7

Co-authored-by: hazendaz <975267+hazendaz@users.noreply.github.com>